--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@openlaw/snapshot-js-erc712": "1.1.2",
     "@truffle/hdwallet-provider": "^1.4.3",
+    "chalk": "^4.1.2",
     "commander": "^8.1.0",
     "dotenv": "^10.0.0",
     "eth-sig-util": "3.0.1",
