--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "tribute-contracts-cli",
   "version": "0.1.0",
   "description": "A command line interface tool to interact with @openlaw/tribute-contracts.",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "bin": {
-    "trib": "./index.js"
+    "trib": "./index.ts"
+  },
+  "directories": {
+    "test": "test"
   },
   "scripts": {
-    "compile": "hardhat compile",
+    "compile": "rimraf build/** && mkdir build || cp -r node_modules/tribute-contracts/contracts/** build/ && hardhat compile",
     "test": "hardhat test"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "repository": {
     "type": "git",
@@ -21,23 +26,30 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@nomiclabs/hardhat-ganache": "^2.0.1",
     "@openlaw/snapshot-js-erc712": "1.2.0",
+    "@typechain/ethers-v5": "^6.0.2",
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
     "dotenv": "^10.0.0",
-    "esm": "^3.2.25",
     "eth-sig-util": "3.0.1",
     "ethereumjs-util": "7.1.0",
-    "ethers": "5.4.5",
+    "hardhat": "^2.6.1",
+    "hardhat-typechain": "^0.3.5",
     "inquirer": "^8.1.2",
     "tribute-contracts": "1.0.1",
+    "typechain": "^4.0.3",
     "web3": "1.4.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.15.0",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.1",
     "babel-jest": "^27.0.6",
-    "hardhat": "^2.6.1",
     "jest": "^27.0.6",
-    "msw": "^0.34.0"
+    "msw": "^0.34.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.3.5"
   }
 }
