--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "description": "A command line interface tool to interact with @openlaw/tribute-contracts.",
   "main": "cli.js",
+  "bin": {
+    "trib": "./cli.js"
+  },
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "compile": "truffle compile",
     "test": "echo \"Error: no test specified\" && exit 1"
