--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "compile": "truffle compile",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test found\"",
     "release": "np"
   },
   "author": "dev@openlaw.io",
