--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@openlaw/snapshot-js-erc712": "1.3.0",
+    "tribute-contracts": "2.0.4",
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
     "dotenv": "^10.0.0",
@@ -32,7 +33,6 @@
     "ethereumjs-util": "7.1.0",
     "ethers": "5.4.5",
     "inquirer": "^8.1.2",
-    "tribute-contracts": "file:../tribute-contracts/tribute-contracts-2.0.4.tgz",
     "truffle": "5.4.6",
     "web3": "1.4.0"
   },
