--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "test"
   },
   "scripts": {
-    "build": "truffle compile",
+    "build": "npm ci && npm run compile",
+    "compile": "rimraf build && mkdir -p build/contracts && cp -r node_modules/tribute-contracts/contracts/** build/contracts && hardhat compile",
     "test": "echo \"Error: no test found\"",
     "release": "np"
   },
@@ -25,7 +26,6 @@
   },
   "dependencies": {
     "@openlaw/snapshot-js-erc712": "1.3.0",
-    "tribute-contracts": "2.0.4",
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
     "dotenv": "^10.0.0",
@@ -33,10 +33,13 @@
     "ethereumjs-util": "7.1.0",
     "ethers": "5.4.5",
     "inquirer": "^8.1.2",
+    "tribute-contracts": "2.0.4",
     "truffle": "5.4.6",
-    "web3": "1.4.0"
+    "web3": "1.4.0",
+    "hardhat": "^2.6.2"
   },
   "devDependencies": {
-    "np": "^7.5.0"
+    "np": "^7.5.0",
+    "rimraf": "^3.0.2"
   }
 }
