--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "test"
   },
   "scripts": {
-    "compile": "truffle compile",
+    "build": "npm ci && npm run compile",
+    "compile": "rimraf build && mkdir -p build/contracts && cp -r node_modules/tribute-contracts/contracts/** build/contracts && hardhat compile",
     "test": "echo \"Error: no test found\"",
     "release": "np"
   },
@@ -34,9 +35,11 @@
     "ethers": "5.4.5",
     "inquirer": "^8.1.2",
     "truffle": "5.4.6",
-    "web3": "1.4.0"
+    "web3": "1.4.0",
+    "hardhat": "^2.6.2"
   },
   "devDependencies": {
-    "np": "^7.5.0"
+    "np": "^7.5.0",
+    "rimraf": "^3.0.2"
   }
 }
