--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "tribute-contracts-cli",
   "version": "0.2.2",
   "description": "A command line interface tool to interact with @openlaw/tribute-contracts",
-  "main": "cli.js",
+  "type": "commonjs",
+  "main": "./lib/index.js",
   "bin": {
-    "trib": "./cli.js"
+    "trib": "./lib/index.js"
   },
   "directories": {
     "test": "test"
   },
   "scripts": {
+    "tsc": "tsc",
     "build": "npm ci && npm run compile",
     "compile": "rimraf build && mkdir -p build/contracts && cp -r node_modules/tribute-contracts/contracts/** build/contracts && hardhat compile",
     "test": "echo \"Error: no test found\"",
@@ -29,18 +31,21 @@
   "dependencies": {
     "@openlaw/snapshot-js-erc712": "1.3.0",
     "chalk": "^4.1.2",
+    "cjs-loader": "^0.1.0",
     "commander": "^8.1.0",
     "dotenv": "^10.0.0",
+    "esm": "^3.2.25",
     "eth-sig-util": "3.0.1",
     "ethereumjs-util": "7.1.0",
     "ethers": "5.4.5",
     "hardhat": "^2.6.2",
     "inquirer": "^8.1.2",
-    "tribute-contracts": "2.2.1",
+    "tribute-contracts": "2.3.3",
     "truffle": "5.4.6",
     "web3": "1.4.0"
   },
   "devDependencies": {
+    "@openzeppelin/test-environment": "^0.1.9",
     "np": "^7.5.0",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2"
