--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tribute-contracts-cli",
   "version": "0.2.2",
-  "description": "A command line interface tool to interact with @openlaw/tribute-contracts",
+  "description": "A command line interface tool to interact with @tributelabs/tribute-contracts",
   "type": "commonjs",
   "main": "./lib/index.js",
   "bin": {
@@ -11,14 +11,14 @@
     "test": "test"
   },
   "scripts": {
+    "build": "npm run compile && npm run tsc",
     "tsc": "tsc",
-    "build": "npm ci && npm run compile",
     "compile": "rimraf build && mkdir -p build/contracts && cp -r node_modules/tribute-contracts/contracts/** build/contracts && hardhat compile",
     "release": "np --no-publish",
     "lint:fix": "prettier --write '**/*.{js,ts,json}'",
     "lint": "prettier --check '**/*.{js,ts,json}'"
   },
-  "author": "dev@openlaw.io",
+  "author": "dev@tributelabs.xyz",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -47,7 +47,9 @@
     "@openzeppelin/test-environment": "^0.1.9",
     "np": "^7.5.0",
     "prettier": "^2.4.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   },
   "prettier": {
     "overrides": [
