fix np release cmd

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run compile && npm run tsc",
     "tsc": "tsc",
     "compile": "rimraf build && mkdir -p build/contracts && cp -r node_modules/tribute-contracts/contracts/** build/contracts && hardhat compile",
-    "release": "np --no-publish",
+    "release": "np --no-publish --no-tests",
     "lint:fix": "prettier --write '**/*.{js,ts,json}'",
     "lint": "prettier --check '**/*.{js,ts,json}'"
   },
