--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eth-sig-util": "3.0.1",
     "ethereumjs-util": "7.1.0",
     "ethers": "5.4.5",
+    "ethers-gcp-kms-signer": "^1.1.2",
     "hardhat": "^2.6.2",
     "inquirer": "^8.1.2",
     "tribute-contracts": "2.3.3",
