Properly hash KycOnboarding config keys

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,9 @@
 # The DAO Address to interact with
 DAO_ADDRESS=0x...
 
+# The token used for onboarding, typically ETH (0x0000000000000000000000000000000000000000)
+TOKEN_ADDR=0x...
+
 ##
 # The mnemonic to open your wallet and sign transactions
 MNEMONIC=...
