--- a/.env.sample
+++ b/.env.sample
@@ -25,12 +25,12 @@ DEBUG=false
 # The API that you are using to connect to Ethereum Blockchain
 # 
 # ALCHEMY Mainnet: https://eth-mainnet.alchemyapi.io/v2/[YOUR_ALCHEMY_API_KEY]
-# ALCHEMY Rinkeby: https://eth-rinkeby.alchemyapi.io/v2/[YOUR_ALCHEMY_API_KEY]
+# ALCHEMY Goerli: https://eth-goerli.alchemyapi.io/v2/[YOUR_ALCHEMY_API_KEY]
 #
 # INFURA Mainnet: https://mainnet.infura.io/v3/[YOUR_INFURA_API_KEY]
-# INFURA Rinkeby: https://rinkeby.infura.io/v3/[YOUR_INFURA_API_KEY]
+# INFURA Goerli: https://goerli.infura.io/v3/[YOUR_INFURA_API_KEY]
 ETHEREUM_BLOCKCHAIN_API=https://...
 
 ## 
-# The Ethereum Network which CLI should interact with: ganache, rinkeby, mainnet
-ETHEREUM_NETWORK=rinkeby
+# The Ethereum Network which CLI should interact with: ganache, goerli, mainnet
+ETHEREUM_NETWORK=goerli
